# doodlecode-studio

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  start.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
backend/: pyproject.toml  requirements.txt  ruff.toml
backend/app/: __init__.py  explain.py  install.py  kernel.py  main.py  models.py  notebook.py  parser.py  proxy.py  serialize.py  tools.py
backend/tests/: conftest.py  test_explain.py  test_install.py  test_main.py  test_notebook.py  test_serialize.py
docs/: AI_HANDOFF.md  ARCHITECTURE.md  AUTHORING.md  DEVELOPMENT.md  FILE_FORMAT.md  ROADMAP.md  USAGE.md  VIDEO_SCRIPT.md
examples/: README.md  diagram_demo.py  full_demo.py  heavy_text_demo.py  how_it_works.py  huge_code_stress_test.py  live_demo.py  media_demo.py  module_01_python_basics.py  module_02_file_handling.py  module_03_ai_doodle_demo.py  module_04_numpy_for_ml.py  module_05_pandas_for_ml.py  module_06_visualization.py  module_07_statistics.py  module_08_linear_algebra.py  module_09_probability.py  module_10_preprocessing.py  module_11_sklearn_basics.py  module_12_regression.py  module_13_neural_networks.py  presentation_deck.py  simple_python.py  video_demo_python_in_presentation.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
remotion-demo/: README.md  SCRIPT.md  package-lock.json  (+2 more)
(+264 files in other folders)
