[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doodlecode-studio-backend"
version = "1.3.5"
description = "FastAPI + Jupyter kernel backend for DoodleCode Studio."
readme = "../README.md"
license = { file = "../LICENSE" }
authors = [{ name = "Kader Mohideen", email = "noreply@kader-xai.github.io" }]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "jupyter_client==8.6.3",
  "ipykernel==6.29.5",
  "python-multipart==0.0.12",
  "nbformat==5.10.4",
  "pydantic==2.9.2",
]

[project.urls]
Homepage = "https://github.com/kader-xai/doodlecode-studio"
Documentation = "https://github.com/kader-xai/doodlecode-studio/tree/main/docs"
Source = "https://github.com/kader-xai/doodlecode-studio"
Issues = "https://github.com/kader-xai/doodlecode-studio/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.setuptools]
packages = ["app"]
